--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ docopt==0.6.2
 idna==3.4
 phonenumbers==8.13.25
 pipreqs==0.4.13
+psycopg==3.1.12
+psycopg-c==3.1.12
 psycopg2-binary==2.9.9
 requests==2.31.0
 sqlparse==0.4.4
