--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-certifi==2023.7.22
+certifi==2023.7.22heroku ps:scale web=1
 charset-normalizer==3.3.2
 dj-config-url==0.1.1
 Django==4.2.7
@@ -16,3 +16,4 @@ typing_extensions==4.8.0
 urllib3==2.1.0
 whitenoise==6.6.0
 yarg==0.1.9
+gunicorn==21.2.0
